# kfocus-source

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
package-apt-source/debian/: changelog  control  copyright  install  kfocus-apt-source.lintian-overrides  links  postinst  postrm  preinst  prerm
package-calamares-settings/: Makefile
package-calamares-settings/common/: enable-luks-discard  fixconkeys-part1  fixconkeys-part2
package-calamares-settings/common/basicwallpaper/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
package-calamares-settings/common/modules/pkgselect/: CMakeLists.txt  PackageSelectViewStep.cpp  PackageSelectViewStep.h  pkgselect.ui
package-calamares-settings/debian/: changelog  control  copyright  kfocus-calamares-settings.install  kfocus-calamares-settings.lintian-overrides  rules
package-calamares-settings/kfocus/: README.md  calamares-launch-normal  calamares-logs-helper  calamaresrc  kfocus-prep-user  kubuntu-calamares.desktop  kubuntu-calamares.desktop.in  settings.conf  settings.conf.old
package-cuda-libs/debian/: changelog  control  copyright
package-firstrun-bin/: CMakeLists.txt  README.md  check_qml.qrc.sh  main.cpp  main.qml  qml.qrc  shellengine.cpp  startupdata.cpp  startupdata.h
package-firstrun-bin/assets/images/source/: apps_list.xcf  curated_apps_list.xcf  curated_apps_page.xcf  insync_login.xcf  insync_start.xcf  network_connect_dialog.xcf  thunderbird_ui.xcf
package-firstrun-bin/debian/: changelog  control  copyright
package-hw/debian/: changelog  control  copyright  install  postinst  prerm
package-installer-prompt/: CMakeLists.txt  README.md  gen_ts.sh  kubuntu-live-environment.desktop
package-installer-prompt/debian/: changelog  control  copyright  lintian-overrides  rules
package-installer-prompt/scripts/: change-system-language  start-kubuntu-live-env
package-installer-prompt/src/: backgroundscreen.cpp  backgroundscreen.h  connectionprogressdialog.cpp  connectionprogressdialog.h  connectionprogressdialog.ui  installerprompt.cpp  installerprompt.h  installerprompt.ui  languagechangedialog.cpp  languagechangedialog.h  languagechangedialog.ui  main.cpp  resource.qrc  translations.qrc  warningdialog.cpp  warningdialog.h  warningdialog.ui  wifipassworddialog.cpp  wifipassworddialog.h  wifipassworddialog.ui
package-installer-prompt/src/translations/: kubuntu-installer-prompt_ar.ts  kubuntu-installer-prompt_arn.ts  kubuntu-installer-prompt_ast.ts  kubuntu-installer-prompt_bg.ts  kubuntu-installer-prompt_ca.ts  kubuntu-installer-prompt_cs.ts  kubuntu-installer-prompt_cy.ts  kubuntu-installer-prompt_da.ts  kubuntu-installer-prompt_de.ts  kubuntu-installer-prompt_el.ts  kubuntu-installer-prompt_en_GB.ts  kubuntu-installer-prompt_eo.ts  kubuntu-installer-prompt_es.ts  kubuntu-installer-prompt_es_VE.ts  kubuntu-installer-prompt_et.ts  kubuntu-installer-prompt_eu.ts  kubuntu-installer-prompt_fa.ts  kubuntu-installer-prompt_fi.ts  kubuntu-installer-prompt_fr.ts  kubuntu-installer-prompt_gl.ts  kubuntu-installer-prompt_he.ts  kubuntu-installer-prompt_hi.ts  kubuntu-installer-prompt_hr.ts  kubuntu-installer-prompt_hu.ts  kubuntu-installer-prompt_id.ts  kubuntu-installer-prompt_id_ID.ts  kubuntu-installer-prompt_it.ts  kubuntu-installer-prompt_ja.ts  kubuntu-installer-prompt_kk.ts  kubuntu-installer-prompt_ko.ts  kubuntu-installer-prompt_lt.ts  kubuntu-installer-prompt_lv.ts  kubuntu-installer-prompt_nb_NO.ts  kubuntu-installer-prompt_nl.ts  kubuntu-installer-prompt_oc.ts  kubuntu-installer-prompt_pl.ts  kubuntu-installer-prompt_pt.ts  kubuntu-installer-prompt_pt_BR.ts  kubuntu-installer-prompt_ro_RO.ts  kubuntu-installer-prompt_ru.ts  (+10 more)
package-jetbrains-toolbox/debian/: changelog  control  copyright  install  jetbrains-toolbox.desktop  lintian-overrides  postinst  postrm  preinst
package-kfocus-power/: kfocus-power-bin.pro
package-kfocus-power/debian/: changelog  control
package-linux-meta/debian/: changelog  control  control.common  dkms-versions  rules  variants
package-main/debian/: changelog  control  copyright  kfocus-common.install  kfocus-common.links  kfocus-common.postinst  kfocus-dm.service  kfocus-main.config  kfocus-main.install  kfocus-main.links  kfocus-main.lintian-overrides  kfocus-main.manpages  kfocus-main.postinst  kfocus-main.postrm  kfocus-main.preinst  kfocus-main.prerm  kfocus-main.templates  kfocus-power-scripts.install  kfocus-power-scripts.links  kfocus-power-scripts.manpages  rules
package-main/src/kfocus-focusrx-dbus-dispatch/: CMakeLists.txt  KDialogLauncher.cpp  KDialogLauncher.h  main.cpp
package-main/src/kfocus-focusrx-notifier/: CMakeLists.txt  KDialogLauncher.cpp  KDialogLauncher.h  main.cpp
package-nvidia/: kfocus-nvidia-pinning  kfocus-nvidia-pinning.550
package-nvidia/debian/: changelog  control  copyright  kfocus-nvidia-pinning.install  kfocus-nvidia-pinning.links  kfocus-nvidia-pinning.postinst  kfocus-nvidia.lintian-overrides  kfocus-nvidia.postinst  kfocus-nvidia.prerm
package-power-bin/: kfocus-power-bin.pro  main.cpp  main.qml  shellengine.cpp  shellengine.h
package-power-bin/debian/: changelog  control  copyright  kfocus-power-bin.install  kfocus-power-bin.links  kfocus-power-bin.manpages  rules
package-qwe/: README.md  qwe.source
package-qwe/debian/: changelog  control  copyright  install  kfocus-qwe.manpages  links  postinst  prerm
package-rollback-bin/: BlockItem.qml  CMakeLists.txt  ConfirmScreenItem.qml  SnapshotCompareItem.qml  SnapshotInfoItem.qml  WaitScreenItem.qml  backendengine.cpp  backendengine.h  kfocus-rollback-bin.desktop  main.cpp  main.qml
package-rollback-bin/debian/: changelog  rules
package-settings/: Makefile
package-tools/src/kfocus-tbt/: CMakeLists.txt  README.md  main.cpp  tbtctldialog.cpp  tbtctldialog.h  tbtctldialog.ui  tbtctlengine.cpp  tbtctlengine.h  tbtqueryresult.cpp  tbtqueryresult.h
package-welcome-bin/: kfocus-welcome-bin.pro  main.cpp  main.qml  qml.qrc  shellengine.cpp  shellengine.h  startupdata.h
research/: 01100_kfocusRollbackSet  remove-esm-apps
test/: README.md
(+774 files in other folders)
